adding bootstrap and radio buttons for options

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,3 +1,10 @@
 .navbar {
-    float;
+    position: fixed !important;
+    bottom: 0 !important;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    width: 100vw;
+    height: 60px;
 }
