removing icon to make header look more centered

--- a/src/Header.css
+++ b/src/Header.css
@@ -7,7 +7,9 @@
     align-items: center;
     background-color: aqua;
   }
-  
+  .header-group{
+    display: inline-flex;
+  }
   .app-name {
     margin-right: 15px;
   }
