--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -6,7 +6,7 @@
     min-width: 220px;
     height: 100px;
     align-items: center;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     border-radius: 12px;
     margin: 10px auto;
 }
@@ -20,7 +20,7 @@ img {
     max-width: 80px;
     max-height: 80px;
     margin: 3%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     border-radius: 12px;
 }
 
