--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -1,8 +1,8 @@
 .hobby-card {
-    background: #ccc;
+    background: #efefef;
     display: flex;
     flex-direction: row;
-    width: 60vw;
+    width: 90vw;
     min-width: 220px;
     height: 100px;
     align-items: center;
@@ -22,6 +22,7 @@ img {
     margin: 3%;
     /* border: 1px solid #000; */
     border-radius: 12px;
+    object-fit: cover;
 }
 
 .hobby-info {
