--- a/src/components/Event.css
+++ b/src/components/Event.css
@@ -25,7 +25,8 @@
 }
 
 .calendar-month {
-    background: #808080;
+    background: #e76559;
+    color: #f6f6f6;
     font-size: max(min(4vw, 16px), 12px);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
