--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,37 +1,36 @@
 .header-top-row {
-    width: 100vw;
-    height: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: #0d6efd;
-  }
-  .header-group{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90vw
-  }
-  .app-name {
-    margin: 0;
-    color: white;
-  
-  }
-  
-  .logo-image {
-    width: 50px;
-    border-radius: 1px solid black;
-  }
-  
+  width: 100vw;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #0d6efd;
+}
+.header-group{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90vw
+}
+.app-name {
+  margin: 0;
+  color: white;
 
-  .back-button {
-    font-size: 24px;
-    font-weight: bold;
-    color: #fafafa;
-    background-color: transparent;
-    border: none;
-    /* position: absolute; */
-    top: 20px;
-    left: 30px;
-  }
+}
+
+.logo-image {
+  width: 50px;
+  border-radius: 1px solid black;
+}
+
+.back-button {
+  color: white;
+  transform: scale(1.5);
+}
+
+.back-button:hover {
+  color: #0d6efd;
+}
+
+
