--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -4,7 +4,8 @@
     margin: auto;
     width: 90vw;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 50px 1fr;
+    gap: 2vw;
 }
 
 .message-header {
@@ -31,4 +32,5 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    justify-self: right;
 }
