--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -25,6 +25,19 @@ img {
     border-radius: 12px;
     object-fit: cover;
 }
+.hobby-img {
+    background: #fff;
+    width: 30%;
+    height: 20vw;
+    min-width: 60px;
+    min-height: 60px;
+    max-width: 80px;
+    max-height: 80px;
+    margin: 3%;
+    /* border: 1px solid #000; */
+    border-radius: 12px;
+    object-fit: cover;
+}
 
 .hobby-info {
     width: 64%;
