--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   background-color: #0d6efd;
+  z-index: 999;
 }
 .header-group{
   display: flex;
