--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
   background-color: white;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   overflow-x: hidden;
 }
 
@@ -11,6 +11,7 @@
   width: 100vw;
   /* height: 80vh; */
   margin: 0 auto 10px auto;
+  padding-top: 10vh;
   padding-bottom: 10vh;
 }
 
