--- a/src/components/Message.css
+++ b/src/components/Message.css
@@ -2,7 +2,7 @@
     text-align: left;
     padding: 10px;
     margin: auto;
-    width: 90vw;
+    width: 90%;
     display: grid;
     grid-template-columns: 50px 1fr;
     gap: 2vw;
