--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -19,14 +19,14 @@
     height: 20vw;
     min-width: 60px;
     min-height: 60px;
-    max-width: 80px;
-    max-height: 80px;
+    max-width: 70px;
+    max-height: 70px;
     margin: 3%;
     /* border: 1px solid #000; */
     border-radius: 12px;
     object-fit: cover;
 }
-.hobby-img {
+/* .hobby-img {
     background: #fff;
     width: 30%;
     height: 20vw;
@@ -35,13 +35,13 @@
     max-width: 80px;
     max-height: 80px;
     margin: 3%;
-    /* border: 1px solid #000; */
+    border: 1px solid #000;
     border-radius: 12px;
     object-fit: cover;
-}
+} */
 
 .hobby-info {
-    width: 64%;
+    width: 50%;
     height: 70px;
     font-size: max(min(3vw, 14px), 10px);
     text-align: left;
@@ -50,4 +50,9 @@
 .hobby-name {
     font-weight: bold;
     font-size: max(min(4vw, 18px), 12px);
+}
+
+.hobbylist-button {
+    margin-left: auto;
+    margin-right: 5%;
 }
