Changed join and leave button for events

--- a/src/components/Event.css
+++ b/src/components/Event.css
@@ -60,7 +60,7 @@
     align-items: center;
     justify-content: start;
     height: 70%;
-    margin: 38px 4% auto auto;
-    transform: scale(1.2)
+    margin: 38px 5% auto auto;
+    /* transform: scale(1.2) */
 }
 
