--- a/src/components/Tag.css
+++ b/src/components/Tag.css
@@ -1,4 +1,9 @@
 .tag {
     display: inline-block;
     margin-right: 10px;
+    padding: 2px;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 8px;
 }
