--- a/src/components/Event.css
+++ b/src/components/Event.css
@@ -1,27 +1,20 @@
 .event-card {
     background: #efefef;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 2fr 6fr 1fr;
     width: 90%;
     min-width: 220px;
     max-width: 1000px;
     height: 100px;
-    align-items: center;
-    /* border: 1px solid #000; */
     border-radius: 12px;
     margin: 10px auto;
+    padding: 12px
 }
 
 .calendar {
     background: #fff;
-    width: 24%;
-    height: 20vw;
     min-width: 60px;
-    min-height: 60px;
     max-width: 70px;
-    max-height: 70px;
-    margin: 3%;
-    /* border: 1px solid #000; */
     border-radius: 12px;
 }
 
@@ -41,10 +34,11 @@
 }
 
 .event-info {
-    width: 70%;
+    width: 100%;
     height: 70px;
     font-size: max(min(3vw, 12px), 10px);
     text-align: left;
+    padding: 0 10px;
 }
 
 .event-name {
@@ -53,14 +47,8 @@
 }
 
 .event-icon{
-    margin-top: auto;
     display: flex;
-    flex-direction: column;
-    width: 50px;
     align-items: center;
     justify-content: start;
-    height: 70%;
-    margin: 38px 5% auto auto;
-    /* transform: scale(1.2) */
 }
 
