--- a/src/components/Event.css
+++ b/src/components/Event.css
@@ -1,20 +1,27 @@
 .event-card {
     background: #efefef;
-    display: grid;
-    grid-template-columns: 2fr 6fr 1fr;
+    display: flex;
+    flex-direction: row;
     width: 90%;
     min-width: 220px;
     max-width: 1000px;
     height: 100px;
+    align-items: center;
+    /* border: 1px solid #000; */
     border-radius: 12px;
     margin: 10px auto;
-    padding: 12px
 }
 
 .calendar {
     background: #fff;
+    width: 24%;
+    height: 20vw;
     min-width: 60px;
+    min-height: 60px;
     max-width: 70px;
+    max-height: 70px;
+    margin: 3%;
+    /* border: 1px solid #000; */
     border-radius: 12px;
 }
 
@@ -34,21 +41,28 @@
 }
 
 .event-info {
-    width: 100%;
+    width: 70%;
     height: 70px;
     font-size: max(min(3vw, 12px), 10px);
     text-align: left;
-    padding: 0 10px;
 }
 
 .event-name {
     font-weight: bold;
     font-size: max(min(4vw, 18px), 12px);
+    /* text-overflow: ellipsis;
+    width: 100%;
+    overflow:hidden; */
 }
 
 .event-icon{
+    margin-top: auto;
     display: flex;
+    flex-direction: column;
+    width: 50px;
     align-items: center;
     justify-content: start;
+    height: 70%;
+    margin: 38px 5% auto auto;
+    /* transform: scale(1.2) */
 }
-
