--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -2,20 +2,23 @@
     overflow: hidden;
     width: 100%;
     height: 90%;
+    display: flex;
+    justify-content: flex-start;
+
 }
 
 .hobby-card {
     background: #efefef;
     display: flex;
     flex-direction: row;
-    width: 90%;
+    width: 100%;
     min-width: 220px;
     max-width: 1000px;
-    min-height: 100px;
+    height: 100px;
     align-items: center;
     /* border: 1px solid #000; */
     border-radius: 12px;
-    margin: 10px auto;
+    /* margin: 10px auto; */
     cursor: pointer;
 }
 
@@ -27,7 +30,8 @@
     min-width: 220px;
     max-width: 1000px;
     min-height: 100px;
-    align-items: center;
+    align-items: flex-start;
+
     /* border: 1px solid #000; */
     border-radius: 12px;
     margin: 10px auto;
@@ -77,4 +81,8 @@
 .hobbylist-button {
     margin-left: auto;
     margin-right: 5%;
+}
+
+.hobby-expandable{
+    margin:0 3% 2% 3%;
 }
