--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -2,8 +2,8 @@
     overflow: hidden;
     width: 100%;
     height: 90%;
-    display: flex;
-    justify-content: flex-start;
+    /* display: flex; */
+    /* justify-content: flex-start; */
 
 }
 
@@ -48,6 +48,7 @@
     max-width: 70px;
     max-height: 70px;
     margin: 3%;
+    margin-bottom: 0;
     /* border: 1px solid #000; */
     border-radius: 12px;
     object-fit: cover;
@@ -84,5 +85,12 @@
 }
 
 .hobby-expandable{
-    margin:0 3% 2% 3%;
+    margin:0 3% 0% 3%;
+    text-align: left;
+}
+
+.carrot{
+    margin: 0;
+    width: 100%;
+    padding: 0;
 }
