--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -18,8 +18,10 @@
     align-items: center;
     /* border: 1px solid #000; */
     border-radius: 12px;
+    padding-top: 3%;
     /* margin: 10px auto; */
     cursor: pointer;
+
 }
 
 .big-hobby-card {
@@ -48,7 +50,7 @@
     max-width: 70px;
     max-height: 70px;
     margin: 3%;
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
     /* border: 1px solid #000; */
     border-radius: 12px;
     object-fit: cover;
@@ -67,6 +69,8 @@
     object-fit: cover;
 } */
 
+
+
 .hobby-info {
     width: 50%;
     min-height: 70px;
@@ -74,18 +78,44 @@
     text-align: left;
 }
 
+.hobby-info.description-true {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+.hobby-info.description-true .hobby-name{
+    font-size: max(min(7vw, 25px), 12px);
+    /* text-align: center; */
+}
+
 .hobby-name {
     font-weight: bold;
     font-size: max(min(4vw, 18px), 12px);
 }
 
-.hobbylist-button {
+
+
+.hobby-card.description-true .hobby-name{
+    font-size: max(min(7vw, 25px), 12px);
+    /* align-items: center; */
+}
+
+.hobbylist-buttons {
     margin-left: auto;
     margin-right: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3%;
+    /* justify-content: space-between; */
 }
 
 .hobby-expandable{
-    margin:0 3% 0% 3%;
+    margin:0 5% 0% 5%;
     text-align: left;
 }
 
