--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -102,6 +102,10 @@
     /* align-items: center; */
 }
 
+.hobbylist-buttons.description-true.added-true {
+    padding-top: 3%;
+}
+
 .hobbylist-buttons {
     margin-left: auto;
     margin-right: 5%;
@@ -110,12 +114,12 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding-top: 3%;
+    /* padding-top: 3%; */
     /* justify-content: space-between; */
 }
 
 .hobby-expandable{
-    margin:0 5% 0% 5%;
+    margin:1% 5% 0% 5%;
     text-align: left;
 }
 
