--- a/src/components/Hobby.css
+++ b/src/components/Hobby.css
@@ -113,7 +113,7 @@
     flex-direction: column;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
+    align-items:flex-end
     /* padding-top: 3%; */
     /* justify-content: space-between; */
 }
