--- a/src/components/Event.css
+++ b/src/components/Event.css
@@ -45,23 +45,24 @@
 .event-info-details > * {
     background-color: #DDEBF1;
     color: #0B6E99;
-    padding-left: 6px;
-    padding-right: 6px;
+
     width: 94%;
     
     /* display: inline-block; */
     margin-right: 10px;
     padding: 2px;
     border-radius: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 6px;
+    padding-right: 6px;
+    /* padding-left: 10px;
+    padding-right: 10px; */
     margin-top: 8px;
     
     /* margin-bottom: 5px; */
 }
 
 .event-info-details.description-false {
-    font-size: 8px;
+    font-size: 7.5px;
 }
 
 .event-description {
