added search bar to event and hobbies page

--- a/src/components/Event.css
+++ b/src/components/Event.css
@@ -121,7 +121,7 @@
 }
 
 .event-expandable{
-    background-color: #d1d1d1;
+    background-color: #dadada;
     margin: 1% 3% 0% 3%;
     text-align: left;
     width: 94%;
