--- a/src/components/EventList.css
+++ b/src/components/EventList.css
@@ -2,3 +2,16 @@
     font-size: 20px;
     color: #656565;
 }
+.search-bar > * {
+    margin-top: 4vh;
+    margin-bottom: 3vh;
+}
+
+.search-bar{
+    /* display: flex; */
+    width: 90%;
+    min-width: 220px;
+    max-width: 1000px;
+    /* align-items: flex-start; */
+    margin: auto;
+}
