--- a/src/components/HobbyList.css
+++ b/src/components/HobbyList.css
@@ -1,3 +1,11 @@
 .search-bar{
+    /* display: flex; */
+    width: 90%;
+    min-width: 220px;
+    max-width: 1000px;
+    /* align-items: flex-start; */
     margin: auto;
+}
+.search-bar > * {
+    margin-top: 4vh;
 }
